# RustyC

./: .gitignore  Cargo.toml  README.md
crates/rustyc_ast/: Cargo.toml
crates/rustyc_ast/src/: binary_operator.rs  block.rs  expression.rs  expression_kind.rs  function.rs  function_item.rs  item.rs  item_kind.rs  lib.rs  node.rs  node_kind.rs  number_node.rs  statement.rs  statement_kind.rs  unary_operator.rs  variable_node.rs
crates/rustyc_ast_lowerer/: Cargo.toml
crates/rustyc_ast_lowerer/src/: ast_lowerer.rs  block_lowerer.rs  expression_lowerer.rs  function_lowerer.rs  item_lowerer.rs  lib.rs  statement_lowerer.rs
crates/rustyc_code_generator/: Cargo.toml
crates/rustyc_code_generator/src/: aarch64_instruction_emitter.rs  block_generator.rs  code_generator.rs  expression_generator.rs  function.rs  function_generator.rs  function_properties.rs  item_generator.rs  label_allocator.rs  lib.rs  statement_generator.rs  variable_properties.rs
crates/rustyc_diagnostics/: Cargo.toml
crates/rustyc_diagnostics/src/: diagnostic.rs  diagnostic_emitter.rs  diagnostic_kind.rs  error.rs  (+1 more)
crates/rustyc_driver/: Cargo.toml
crates/rustyc_driver/src/: driver.rs  error.rs  lib.rs
crates/rustyc_hir/: Cargo.toml
crates/rustyc_lexer/: Cargo.toml
crates/rustyc_parser/: Cargo.toml
crates/rustyc_span/: Cargo.toml
crates/rustyc_token/: Cargo.toml
crates/rustyc_ty/: Cargo.toml
crates/rustyc_type/: Cargo.toml
crates/rustyc_type_checker/: Cargo.toml
src/: compiler.rs  error.rs  lexer.rs  lib.rs  main.rs  span.rs  token.rs
src/ast/: mod.rs  node.rs  node_kind.rs  number_node.rs
src/compiler/: compiler.rs  error.rs  mod.rs
src/diagnostics/: diagnostic.rs  diagnostic_emitter.rs  diagnostic_kind.rs  error.rs  mod.rs  result.rs
src/lexer/: lexer.rs  mod.rs  raw_token.rs  raw_token_cursor.rs  raw_token_kind.rs
src/parser/: parser.rs  token_cursor.rs
src/token/: base.rs  binary_operation_token.rs  binary_operator_token.rs  delimiter_token.rs  mod.rs  number_token.rs  token.rs  token_kind.rs
tests/: test.sh  test_functions.c
(+74 files in other folders)
